<resources>
    <string name="app_name">androidProject-ING4</string>
    <string name="statistiques">Statistiques</string>
    <string name="location">Location</string>
    <string name="historique">Historique</string>
    <string name="add_game">Add Game</string>
    <string name="Roger_ederer">Roger Federer</string>
    <string name="photo">Photo</string>
    <string name="resultat">Résultat</string>
    <string name="_0">0</string>
    <string name="adversaire">Adversaire</string>
    <string name="duree">Durée : </string>
    <string name="nombre_points_gagne">Nb pts gagnés</string>
    <string name="prem_ere_balle">1ere balles</string>
    <string name="aces">Aces</string>
    <string name="double_fautes">Double fautes</string>
    <string name="pts_gagne_prem_balle">Pts gagn. 1ere balle</string>
    <string name="coup_droit_gagant">Coups droits gagnants</string>
    <string name="nb_jeu_gagne">Nombre jeu gagné</string>
    <string name="nb_faute_direct">Nb fautes direct</string>
    <string name="date">Date : </string>
    <string name="enter_date">Date of the game</string>
    <string name="enter_adversaire">Adversaire of the game</string>
    <string name="adversaire_form">"Adversaire : "</string>
    <string name="addGameTitle">Ajouter un match</string>
    <string name="addGameResTitle">Résultat du match</string>
    <string name="takePicture">Prendre une photo</string>
    <string name="save">Enregistrer</string>


</resources>
