<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addGameActivity">

    <TextView
        android:id="@+id/addGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addGameTitle"
        android:textSize="30sp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp">

        <TextView
            android:id="@+id/date_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/date_form_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp">
        <TextView
            android:id="@+id/adversaire_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adversaire_form" />

        <EditText
            android:id="@+id/adversaire_form_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_adversaire" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addGametableLayoutResult"
        android:layout_marginTop="20dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="3dip"
                android:text="@string/Roger_ederer" />

            <EditText
                android:id="@+id/AGPlayerS1"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AGPlayerS2"
                android:background="@android:color/transparent"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AGPlayerS3"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />/>

            <EditText
                android:id="@+id/AGPlayerS4"
                android:background="@android:color/transparent"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AGPlayerS5"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />/>


        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:padding="3dip"
                android:text="@string/adversaire" />

            <EditText
                android:id="@+id/AGAdversaireS1"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />/>

            <EditText
                android:id="@+id/AGAdversaireS2"
                android:background="@android:color/transparent"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AGAdversaireS3"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />/>

            <EditText
                android:id="@+id/AGAdversaireS4"
                android:background="@android:color/transparent"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/AGAdversaireS5"
                android:background="#F4F4F4"
                android:hint="@string/_0"
                android:padding="3dip"
                android:textAlignment="center" />/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/table_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="3dip"
                android:text="" />

            <TextView
                android:padding="3dip"
                android:text="@string/Roger_ederer"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <TextView
                android:padding="3dip"
                android:textAlignment="center"
                android:text="@string/adversaire" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/nombre_points_gagne" />

            <EditText
                android:id="@+id/AgPlayer_nb_pts_gagne_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_pts_gagne_adversaire"
                android:padding="1dip"
                android:textAlignment="center"
                android:background="@null"

                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/prem_ere_balle" />

            <EditText
                android:id="@+id/AgPlayer_nb_prem_ere_balle_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_prem_ere_balle_adversaire"
                android:padding="1dip"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/aces" />

            <EditText
                android:id="@+id/AgPlayer_nb_aces_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_aces_adversaire"
                android:padding="1dip"
                android:background="@null"
                android:textAlignment="center"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/double_fautes" />

            <EditText
                android:id="@+id/AgPlayer_nb_double_fautes_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_double_fautes_adversaire"
                android:padding="1dip"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/pts_gagne_prem_balle" />

            <EditText
                android:id="@+id/AgPlayer_nb_pts_gagne_prem_balle_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_pts_gagne_prem_balle_adversaire"
                android:padding="1dip"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/coup_droit_gagant" />

            <EditText
                android:id="@+id/AgPlayer_nb_coup_droit_gagant_player"
                android:layout_height="match_parent"
                android:padding="1dip"
                android:hint="@string/_0"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_coup_droit_gagant_adversaire"
                android:padding="1dip"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/nb_jeu_gagne" />

            <EditText
                android:id="@+id/AgPlayer_nb_jeu_gagne_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_jeu_gagne_adversaire"
                android:padding="1dip"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>

        <TableRow
            android:layout_width="0dp">

            <TextView
                android:layout_width="120dp"
                android:padding="1dip"
                android:text="@string/nb_faute_direct" />

            <EditText
                android:id="@+id/AgPlayer_nb_faute_direct_player"
                android:padding="1dip"
                android:hint="@string/_0"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="#F4F4F4"/>

            <EditText
                android:id="@+id/AgAdversaire_nb_faute_direct_adversaire"
                android:padding="1dip"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@null"
                android:hint="@string/_0" />
        </TableRow>


    </TableLayout>

    <ImageView
        android:id="@+id/apercu_picture"
        android:layout_width="143dp"
        android:layout_height="131dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_image_black_24dp" />

    <Button
        android:id="@+id/AddGameSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/save" />

</LinearLayout>