<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment">

    <TextView
        android:id="@+id/resultat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:text="@string/resultat"/>

    <TableLayout
        android:id="@+id/table_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="23dp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/sets_joueur"
            android:layout_width="0dp"/>

        <TableRow android:id="@+id/sets_adversaire"/>

    </TableLayout>

    <TextView
        android:id="@+id/duree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_score"
        android:layout_marginStart="23dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/duree" />

    <TextView
        android:id="@+id/duree_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_score"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/duree_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/statistiques_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/duree_value"
        android:layout_marginStart="23dp"
        android:layout_marginTop="32dp"
        android:textSize="30sp"
        android:text="@string/statistiques" />

    <TableLayout
        android:id="@+id/table_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statistiques_title"
        android:layout_marginHorizontal="23dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:stretchColumns="*"/>


</RelativeLayout>